--- a/README.Rmd
+++ b/README.Rmd
@@ -145,7 +145,10 @@ tbsp_lr_tune_grid <- tune_grid(
 ```
 
 ```{r}
-collect_metrics(tbsp_lr_tune_grid)
+area_rl <- collect_metrics(tbsp_lr_tune_grid) |> 
+  filter(.metric == "roc_auc") |> 
+  summarise(area = mean(mean),
+            desvio_pad = mean(std_err))
 
 collect_metrics(tbsp_lr_tune_grid)  |> 
   ggplot(aes(x = penalty, y = mean)) +
@@ -175,6 +178,9 @@ tbsp_lr_last_fit <- last_fit(
 # Variáveis importantes
 tbsp_lr_last_fit_model <- tbsp_lr_last_fit$.workflow[[1]]$fit$fit
 vip(tbsp_lr_last_fit_model)
+
+## 
+tbsp_lr_last_fit$.metrics
 ```
 
 # Guardar tudo 
@@ -182,60 +188,26 @@ vip(tbsp_lr_last_fit_model)
 write_rds(tbsp_lr_last_fit, "data/tbsp_lr_last_fit.rds")
 write_rds(tbsp_lr_model, "data/tbsp_lr_model.rds")
 collect_metrics(tbsp_lr_last_fit)
-tbsp_test_preds <- collect_predictions(tbsp_lr_last_fit)
+tbsp_test_preds_lr <- collect_predictions(tbsp_lr_last_fit)
 ```
 
 ## roc
 
 ```{r}
-tbsp_roc_curve <- tbsp_test_preds  |>  roc_curve(TB, .pred_0)
-autoplot(tbsp_roc_curve)
+tbsp_roc_curve_lr <- tbsp_test_preds_lr  |>  roc_curve(TB, .pred_0)
+autoplot(tbsp_roc_curve_lr)
 
-tbsp_lift_curve <- tbsp_test_preds  |>  lift_curve(TB, .pred_0)
-autoplot(tbsp_lift_curve)
+tbsp_lift_curve_lr <- tbsp_test_preds_lr  |>  lift_curve(TB, .pred_0)
+autoplot(tbsp_lift_curve_lr)
 ```
 
 ### Matriz de Confusão
 ```{r}
-tbsp_test_preds <- tbsp_test_preds |> 
+tbsp_test_preds_lr <- tbsp_test_preds_lr |> 
   mutate(
     TB_class = factor(if_else(.pred_0 > 0.9, "0", "1"))
   ) 
-tbsp_test_preds |> conf_mat(TB, TB_class)
-```
-## risco por faixa de TB
-```{r}
-tbsp_test_preds  |> 
-  mutate(
-    tb =  factor(ntile(.pred_0, 10))
-  ) |> 
-  count(tb, TB) %>%
-  ggplot(aes(x = tb, y = n, fill = TB)) +
-  geom_col(position = "fill") +
-  geom_label(aes(label = n), position = "fill") +
-  coord_flip()
-```
-
-
-## gráfico sobre os da classe 1
-
-```{r}
-percentis = 20
-tbsp_test_preds |> 
-  mutate(
-    tb = factor(ntile(.pred_0, percentis))
-  ) |> 
-  filter(TB == 1)  |> 
-  group_by(tb, .drop = FALSE)  |> 
-  summarise(
-    n = n(),
-    media = mean(.pred_0)
-  ) |> 
-  mutate(p = n/sum(n)) |> 
-  ggplot(aes(x = p, y = tb)) +
-  geom_col() +
-  geom_label(aes(label = scales::percent(p))) +
-  geom_vline(xintercept = 1/percentis, colour = "red", linetype = "dashed", size = 1)
+tbsp_test_preds_lr |> conf_mat(TB, TB_class)
 ```
 
 
@@ -356,10 +328,35 @@ vip(tbsp_dt_last_fit_model)
 
 write_rds(tbsp_dt_last_fit, "tbsp_dt_last_fit.rds")
 write_rds(tbsp_dt_model, "tbsp_dt_model.rds")
+collect_metrics(tbsp_dt_last_fit)
+collect_metrics(tbsp_lr_last_fit)
 
 # Modelo final ------------------------------------------------------------
 
 tbsp_final_dt_model <- tbsp_dt_wf  |>  fit(tbsp)
+```
+
+```{r}
+tbsp_test_preds_dt <- collect_predictions(tbsp_dt_last_fit)
+```
+
+## roc
+
+```{r}
+tbsp_roc_curve_dt <- tbsp_test_preds_dt  |>  roc_curve(TB, .pred_0)
+autoplot(tbsp_roc_curve_dt)
+
+tbsp_lift_curve_dt <- tbsp_test_preds_dt  |>  lift_curve(TB, .pred_0)
+autoplot(tbsp_lift_curve_dt)
+```
+
+### Matriz de Confusão
+```{r}
+tbsp_test_preds_dt <- tbsp_test_preds_dt |> 
+  mutate(
+    TB_class = factor(if_else(.pred_0 > 0.9, "0", "1"))
+  ) 
+tbsp_test_preds_dt |> conf_mat(TB, TB_class)
 ```
 
 # Random Forest
@@ -468,10 +465,39 @@ vip(tbsp_rf_last_fit_model)
 
 write_rds(tbsp_rf_last_fit, "tbsp_rf_last_fit.rds")
 write_rds(tbsp_rf_model, "tbsp_rf_model.rds")
+collect_metrics(tbsp_lr_last_fit)
+collect_metrics(tbsp_dt_last_fit)
+collect_metrics(tbsp_rf_last_fit)
 
 # Modelo final ------------------------------------------------------------
 tbsp_final_dt_model <- tbsp_rf_wf  |>  fit(tbsp)
 ```
+
+```{r}
+tbsp_test_preds_rf <- collect_predictions(tbsp_rf_last_fit)
+```
+
+## roc
+
+```{r}
+tbsp_roc_curve_rf <- tbsp_test_preds_rf  |>  roc_curve(TB, .pred_0)
+autoplot(tbsp_roc_curve_rf)
+
+tbsp_lift_curve_rf <- tbsp_test_preds_rf  |>  lift_curve(TB, .pred_0)
+autoplot(tbsp_lift_curve_rf)
+```
+
+### Matriz de Confusão
+```{r}
+tbsp_test_preds_rf <- tbsp_test_preds_rf |> 
+  mutate(
+    TB_class = factor(if_else(.pred_0 > 0.9, "0", "1"))
+  ) 
+tbsp_test_preds_rf |> conf_mat(TB, TB_class)
+```
+
+
+
 
 # Boosting gradient tree
 
@@ -529,7 +555,7 @@ grid_xgb <- expand.grid(
 ```
 
 
-```{r}
+```{r,warning=FALSE}
 tbsp_xgb_tune_grid <- tune_grid(
   tbsp_xgb_wf,
   resamples = tbsp_resamples,
@@ -710,7 +736,7 @@ Vimos que a melhor combinação foi
 
 Agora vamos tunar o `learn_rate` e o `trees` de novo, mas deixando o `learn_rate` assumir valores menores.
 
-```{r}
+```{r, warning=FALSE}
 tbsp_xgb_model <- boost_tree(
   mtry = tbsp_xgb_select_best_passo4$mtry,
   trees = tune(),
@@ -752,7 +778,7 @@ tbsp_xgb_select_best_passo5
 
 ## Desempenho dos modelos finais
 
-```{r}
+```{r, warning=FALSE}
 tbsp_xgb_model <- boost_tree(
   mtry = tbsp_xgb_select_best_passo4$mtry,
   trees = tbsp_xgb_select_best_passo5$trees,
@@ -796,7 +822,7 @@ tbsp_xgb_last_fit  |>
 
 ## MODELO FINAL FINAL
 
-```{r}
+```{r,warning=FALSE}
 tbsp_xgb_modelo_final <- tbsp_xgb_wf |>  fit(tbsp)
 
 saveRDS(tbsp_xgb_modelo_final, "tbsp_xgb_modelo_final.rds")
@@ -848,4 +874,42 @@ tbsp_xgb_last_fit_model <- tbsp_xgb_last_fit$.workflow[[1]]$fit$fit
 vip(tbsp_xgb_last_fit_model)
 ```
 
+```{r}
+tbsp_test_preds_xgb <- collect_predictions(tbsp_xgb_last_fit)
+```
+
+## roc
+
+```{r}
+tbsp_roc_curve_xgb <- tbsp_test_preds_xgb  |>  roc_curve(TB, .pred_0)
+autoplot(tbsp_roc_curve_xgb)
+
+tbsp_lift_curve_xgb <- tbsp_test_preds_xgb  |>  lift_curve(TB, .pred_0)
+autoplot(tbsp_lift_curve_xgb)
+```
+
+### Matriz de Confusão
+```{r}
+tbsp_test_preds_xgb <- tbsp_test_preds_xgb |> 
+  mutate(
+    TB_class = factor(if_else(.pred_0 > 0.9, "0", "1"))
+  ) 
+tbsp_test_preds_xgb |> conf_mat(TB, TB_class)
+```
+
+
+#### resumo final
+
+```{r}
+collect_metrics(tbsp_lr_last_fit)
+collect_metrics(tbsp_dt_last_fit)
+collect_metrics(tbsp_rf_last_fit)
+collect_metrics(tbsp_xgb_last_fit)
+```
+
+```{r}
+tbsp_lr_best_params
+tbsp_dt_best_params
+tbsp_rf_best_params
+```
 
